# spark-art

./: Makefile  README.md  package-lock.json
backend/: .gitignore  config.py  go.mod  main.py  pyproject.toml
backend/cmd/api/: main.go
backend/dbinit/: init.sql
backend/dbrepo/: postgresdb.py
backend/models/: models.py
backend/routers/: artworkRouter.py  commentRouter.py  router.py  topicRouter.py  userRouter.py
backend/services/hashrepo/: bcrypt_repo.py  repository.py  test_repo.py
backend/src/config/: config.go
backend/src/dbrepo/: repository.go  test_repo.go
backend/src/http/handlers/: repository.go  user_handlers.go
backend/src/http/router/: router.go
backend/src/models/: models.go
backend/utils/: http.py
frontend/: tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/login/: route.ts
frontend/src/app/api/profile-icon/: route.ts
frontend/src/app/api/register/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/prompts/: page.tsx
frontend/src/app/prompts/[id]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/topics/: page.tsx
frontend/src/app/topics/[id]/: page.tsx
frontend/src/lib/: navbar.tsx
frontend/src/lib/components/: navbar.tsx
frontend/src/lib/icons/: index.ts
frontend/src/lib/models/: index.ts
frontend/src/lib/types/: index.ts
frontend/src/repo/: artRepo.ts  commentRepo.ts  index.ts  promptRepo.ts  repository.ts  topicRepo.ts  userRepo.ts
(+7 files in other folders)
